--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ a {
 .two {
     display: flex;
     flex-direction: column;
+    justify-content: center;
 }
 
 .title-font-two {
@@ -86,10 +87,61 @@ a {
 }
 .content-two-container {
     display: flex;
+    margin: 40px;
 }
 
 .content {
     padding: 100px 200px 100px 200px;
     height: 250px;
     align-items: center;
+}
+
+.illustration {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    width: 150px;
+    margin-left: 35px;
+    margin-right: 35px;
+
+}
+
+.image-two {
+    border: 5px solid;
+    border-color: #1B4ED8;
+    height: 150px;
+    width: 150px;
+    border-radius: 20px;
+}
+
+.center-text {
+    text-align: center;
+}
+
+.three {
+    display: flex;
+    background-color: lightgray;
+    padding-left: 350px;
+    padding-right: 350px;
+    justify-content: center;
+}
+
+.quotation {
+    display: flex;
+    flex-direction: column;    
+}
+
+.quote{
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    font-weight: 300;
+}
+
+.author{
+    font-size: 30px;
+    color: #1F2937;
+    font-weight: 600;
+    text-align: right;
 }
